added border and some padding&margin

--- a/index.html
+++ b/index.html
@@ -3,43 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <title>Virtual Phone Pad</title>
+    <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-4 col-md-offset-4">
-                <div class="row">
-                    <div class="col">
-                        1
+            <div class="col-md-4 col-md-offset-4 phone">
+                <div class="num-pad">
+                    <div class="row">
+                        <div class="col">
+                            <div class="border border-dark num rounded-circle">
+                                <div class ="txt">
+                                    1
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="border border-dark num rounded-circle">
+                                <div class ="txt">
+                                    2
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="border border-dark num rounded-circle">
+                                <div class ="txt">
+                                    3
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col">
-                        2
+                    <div class="row">
+                        <div class="col">
+                            <div class="border border-dark num rounded-circle">
+                                <div class ="txt">
+                                    4
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="border border-dark num rounded-circle">
+                                <div class ="txt">
+                                    5
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="border border-dark num rounded-circle">
+                                <div class ="txt">
+                                    6
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col">
-                        3
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        4
-                    </div>
-                    <div class="col">
-                        5
-                    </div>
-                    <div class="col">
-                        6
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        7
-                    </div>
-                    <div class="col">
-                        8
-                    </div>
-                    <div class="col">
-                        9
+                    <div class="row">
+                        <div class="col">
+                            <div class="border border-dark num rounded-circle">
+                                <div class ="txt">
+                                    7
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="border border-dark num rounded-circle">
+                                <div class ="txt">
+                                    8
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="border border-dark num rounded-circle">
+                                <div class ="txt">
+                                    9
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
