--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Virtual Phone Pad</title>
+    <script src="script.js"></script>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
@@ -10,24 +11,25 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-md-offset-4 phone">
+                <input type="tel" name="name" id="telNumber" class="form-control tel" value="" />
                 <div class="num-pad">
                     <div class="row">
                         <div class="col">
-                            <div class="border border-dark num rounded-circle">
+                            <div class="border border-dark num rounded-circle _span">
                                 <div class ="txt">
                                     1
                                 </div>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="border border-dark num rounded-circle">
+                            <div class="border border-dark num rounded-circle _span">
                                 <div class ="txt">
                                     2
                                 </div>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="border border-dark num rounded-circle">
+                            <div class="border border-dark num rounded-circle _span">
                                 <div class ="txt">
                                     3
                                 </div>
@@ -36,21 +38,21 @@
                     </div>
                     <div class="row">
                         <div class="col">
-                            <div class="border border-dark num rounded-circle">
+                            <div class="border border-dark num rounded-circle _span">
                                 <div class ="txt">
                                     4
                                 </div>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="border border-dark num rounded-circle">
+                            <div class="border border-dark num rounded-circle _span">
                                 <div class ="txt">
                                     5
                                 </div>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="border border-dark num rounded-circle">
+                            <div class="border border-dark num rounded-circle _span">
                                 <div class ="txt">
                                     6
                                 </div>
@@ -59,21 +61,21 @@
                     </div>
                     <div class="row">
                         <div class="col">
-                            <div class="border border-dark num rounded-circle">
+                            <div class="border border-dark num rounded-circle _span">
                                 <div class ="txt">
                                     7
                                 </div>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="border border-dark num rounded-circle">
+                            <div class="border border-dark num rounded-circle _span">
                                 <div class ="txt">
                                     8
                                 </div>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="border border-dark num rounded-circle">
+                            <div class="border border-dark num rounded-circle _span">
                                 <div class ="txt">
                                     9
                                 </div>
