--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Virtual Phone Pad</title>
     <script src="script.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
@@ -11,7 +12,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-md-offset-4 phone">
-                <input type="tel" name="name" id="telNumber" class="form-control tel" value="" />
+                <input type="tel" name="name" id="dailNum" class="form-control tel" value="" />
                 <div class="num-pad">
                     <div class="row">
                         <div class="col">
@@ -86,5 +87,16 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('.num').click(function () {
+                var num = $(this);
+                var text = $.trim(num.find('.txt').clone().children().remove().end().text());
+                var dailNum = $('#dailNum');
+                $(dailNum).val(dailNum.val() + text);
+            });
+
+        });
+    </script>
 </body>
 </html>
